<resources>
    <string name="app_name">E-Commerce</string>

    <!-- Content Description Resources -->
    <string name="route_logo_description">route logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_screen_greeting_text">Welcome Back To Route</string>
    <string name="login_sub_greeting">Please, sign in with your email</string>
    <string name="mail_edit_text_hint">enter your email</string>
    <string name="user_name_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="your_password_label">Your Password</string>
    <string name="password_hint">enter your password</string>
    <string name="forgot_password_txt">Forgot password?</string>
    <string name="login_txt">Login</string>
    <string name="create_account_txt">Don\'t have an account? Create Account</string>
    <string name="txt_input_full_name_hint">enter your full name</string>
    <string name="mobile_number_label">Mobile Number</string>
    <string name="your_mobile_number_label">Your Mobile Number</string>
    <string name="mobile_number_input_hint">enter your mobile number</string>
    <string name="mail_address_hint">E-mail Address</string>
    <string name="your_mail_address_hint">Your E-mail Address</string>
    <string name="your_address_hint">Your Address</string>
    <string name="sign_up_txt">Sign Up</string>
    <string name="full_name_label">Full Name</string>
    <string name="your_full_name_label">Your Full Name</string>
    <string name="welcome_mohammad_text">Welcome, Mohammad</string>
</resources>